исправил путь к шрифтам

--- a/less/styles.less
+++ b/less/styles.less
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'EBGaramond';
-	src: url("/font/EB_Garamond/EBGaramond12-Regular.ttf");
+	src: url("../font/EB_Garamond/EBGaramond12-Regular.ttf");
 }
 @font-face {
 	font-family: 'Apple';
-	src: url("/font/opensans700.woff");
+	src: url("../font/opensans700.woff");
 }
 body {
 	background: url("/images/background.jpg");
@@ -35,9 +35,9 @@ fieldset {
 }
 
 
-/* 
+/*
 ------------------------------------------------
-				Главная обёртка 
+				Главная обёртка
 ------------------------------------------------
 */
 
@@ -49,7 +49,7 @@ fieldset {
     box-shadow: 0 0 30px rgba(0,0,0,0.7);
 }
 
-/* 
+/*
 ------------------------------------------------
 				Шапка страницы
 ------------------------------------------------
@@ -109,13 +109,13 @@ fieldset {
 	.img-homer-head {
     	float: right;
     	margin: 29px 110px 0px 0px;
-	}	
+	}
 	.wrapp-links {
     	width: 75px;
     	margin: -65px 18px 0px 0px;
-    	float: right;	
+    	float: right;
 
-//  Оформление "RSS" и "B" 
+//  Оформление "RSS" и "B"
 
 		.fa {
 		    color: #ffffff;
@@ -134,7 +134,7 @@ fieldset {
     		&:hover {
     			background-color: #F09836;
     		}
-		} 
+		}
 		.vk {
 			.rss;
 			&:hover {
@@ -142,9 +142,9 @@ fieldset {
 			}
 		}
 	}
-}	
+}
 
-// Оформление навигационной панели 
+// Оформление навигационной панели
 
 .navigation {
     height: 45px;
@@ -169,7 +169,7 @@ fieldset {
     			padding: 15px 17px 15px 15px;
    				&:hover {
    					background-color: rgba(10,10,10,0.2);
-    				color: #5a5a5a;		
+    				color: #5a5a5a;
    				}
    			}
    		}
@@ -194,7 +194,7 @@ fieldset {
     }
 }
 
-// Выпадающий список 
+// Выпадающий список
 
 .drop-down-list {
 	position: absolute;
@@ -215,13 +215,13 @@ fieldset {
     }
 }
 
-/* 
+/*
 -----------------------------------------------
-				Контент 
+				Контент
 -----------------------------------------------
 */
 
-// Стилизация ссылок контента 
+// Стилизация ссылок контента
 
 .ref {
 	color: #B44187;
@@ -238,10 +238,10 @@ fieldset {
 	.ref;
 	&:hover {
    		border-bottom: 2px #f4c430 solid;
-	}	
+	}
 }
 
-// Дата публикации 
+// Дата публикации
 
 .date-publication {
 	color: #777;
@@ -283,10 +283,10 @@ fieldset {
 	}
 }
 
-// Новости и Интересное 
+// Новости и Интересное
 
 .clearfix {
-	zoom: 1; 
+	zoom: 1;
 	display: block;
 	&:after {
 		content: ".";
@@ -312,13 +312,13 @@ fieldset {
 .cap-section {
    	margin-bottom: 10px;
    	padding: 8px 36px;
-   	background: url("/images/111.png") no-repeat, 
+   	background: url("/images/111.png") no-repeat,
    				url("/images/news.png") no-repeat 9px 10px;
 	background-color: #FFDE00;
    	box-sizing: border-box;
 	.section-title {
 		font-size: 16px;
-		color: #000000;	
+		color: #000000;
    		&:hover {
    			text-decoration: underline;
    		}
@@ -361,7 +361,7 @@ fieldset {
    	padding-left: 15px;
 }
 
-// Блок "прочее" 
+// Блок "прочее"
 
 .wrapp-other {
     margin-top: 30px;
@@ -408,9 +408,9 @@ fieldset {
 	}
 }
 
-/* 
+/*
 -----------------------------------------------
-				Сайд-бар 
+				Сайд-бар
 -----------------------------------------------
 */
 
@@ -454,7 +454,7 @@ fieldset {
 	.img-bar {
 		width: 150px;
 		height: 150px;
-		overflow: hidden; 
+		overflow: hidden;
 	}
 	legend {
 		font-weight: 600;
@@ -593,9 +593,9 @@ fieldset {
 	}
 }
 
-/* 
+/*
 ------------------------------------------------------------
-						Футер 
+						Футер
 ------------------------------------------------------------
 */
 
@@ -644,10 +644,10 @@ fieldset {
     		float: left;
 			margin: 31px 0px 31px 30px;
 		}
-	}	
+	}
 	.navigation {
     	margin-right: 0px;
-    } 
+    }
 	.content {
 		width: inherit;
 	    padding: 10px 10px;
@@ -700,7 +700,7 @@ fieldset {
 
 @media screen and (max-width: 700px) {
 	.cap-section {
-		background: url("/images/111.png") no-repeat -16px 0px, 
+		background: url("/images/111.png") no-repeat -16px 0px,
 					url("/images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
@@ -727,13 +727,13 @@ fieldset {
 		margin-top: 15px;
 	}
 	.cap-section {
-		background: url("/images/111.png") no-repeat 244px 0px, 
+		background: url("/images/111.png") no-repeat 244px 0px,
 					url("/images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.img {
 		.cap-section;
-		background: url("/images/111.png") no-repeat 244px 0px, 
+		background: url("/images/111.png") no-repeat 244px 0px,
 					url("/images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
@@ -753,13 +753,13 @@ fieldset {
 		}
 	}
 	.cap-section {
-		background: url("/images/111.png") no-repeat 175px 0px, 
+		background: url("/images/111.png") no-repeat 175px 0px,
 					url("/images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.img {
 		.cap-section;
-		background: url("/images/111.png") no-repeat 174px 0px, 
+		background: url("/images/111.png") no-repeat 174px 0px,
 					url("/images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
@@ -796,7 +796,7 @@ fieldset {
     		display: inline-block;
     		margin: 0px 0px 20px 30px;
     		float: none;
-    	}	
+    	}
 	}
 	.navigation {
    		.list-navigation {
@@ -808,8 +808,8 @@ fieldset {
     				padding: 15px 14px 15px 15px;
    					&:hover {
    						background-color: rgba(10,10,10,0.2);
-    					color: #5a5a5a;	
-    				}	
+    					color: #5a5a5a;
+    				}
    				}
    			}
    		}
@@ -818,13 +818,13 @@ fieldset {
 		left: -70px;
 	}
 	.cap-section {
-		background: url("/images/111.png") no-repeat 75px 0px, 
+		background: url("/images/111.png") no-repeat 75px 0px,
 					url("/images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.img {
 		.cap-section;
-		background: url("/images/111.png") no-repeat 75px 0px, 
+		background: url("/images/111.png") no-repeat 75px 0px,
 					url("/images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
@@ -862,19 +862,19 @@ fieldset {
 	}
 	.wrapp-head {
     	margin-top: 0px;
-    	padding: 0px;	
+    	padding: 0px;
 	}
 	.drop-down-list {
 		left: -70px;
 	}
 	.cap-section {
-		background: url("/images/111.png") no-repeat 35px 0px, 
+		background: url("/images/111.png") no-repeat 35px 0px,
 					url("/images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .img {
     	.cap-section;
-		background: url("/images/111.png") no-repeat 35px 0px, 
+		background: url("/images/111.png") no-repeat 35px 0px,
 					url("/images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
@@ -887,13 +887,13 @@ fieldset {
 
 @media screen and (max-width: 360px) {
 	.cap-section {
-		background: url("/images/111.png") no-repeat 25px 0px, 
+		background: url("/images/111.png") no-repeat 25px 0px,
 					url("/images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .img {
     	.cap-section;
-		background: url("/images/111.png") no-repeat 25px 0px, 
+		background: url("/images/111.png") no-repeat 25px 0px,
 					url("/images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
@@ -919,13 +919,13 @@ fieldset {
 		left: -86px;
 	}
 	.cap-section {
-		background: url("/images/111.png") no-repeat -15px 0px, 
+		background: url("/images/111.png") no-repeat -15px 0px,
 					url("/images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .img {
     	.cap-section;
-		background: url("/images/111.png") no-repeat -15px 0px, 
+		background: url("/images/111.png") no-repeat -15px 0px,
 					url("/images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
