--- a/less/styles.less
+++ b/less/styles.less
@@ -7,7 +7,7 @@
 	src: url("../font/opensans700.woff");
 }
 body {
-	background: url("images/background.jpg");
+	background: url("../images/background.jpg");
 	font-family: Arial, Helvetica, Verdana, sans-serif;
 	font-size: 14px;
 	max-width: 1050px;
@@ -312,8 +312,8 @@ fieldset {
 .cap-section {
    	margin-bottom: 10px;
    	padding: 8px 36px;
-   	background: url("images/111.png") no-repeat,
-   				url("images/news.png") no-repeat 9px 10px;
+   	background: url("../images/111.png") no-repeat,
+   				url("../images/news.png") no-repeat 9px 10px;
 	background-color: #FFDE00;
    	box-sizing: border-box;
 	.section-title {
@@ -327,21 +327,21 @@ fieldset {
    				content: '';
    				width: 16px;
    				height: 16px;
-   				background: url('images/news.png') no-repeat;
+   				background: url('../images/news.png') no-repeat;
    			}
     	}
     	.interesting {
     		&:before {
     			content: '';
-    			background: url('images/default.png') no-repeat;
+    			background: url('../images/default.png') no-repeat;
     		}
     	}
 	}
 }
 .img {
 	.cap-section;
-	background: url("images/111.png") no-repeat,
-				url("images/default.png") no-repeat 9px 10px;
+	background: url("../images/111.png") no-repeat,
+				url("../images/default.png") no-repeat 9px 10px;
 	background-color: #FFDE00;
 }
 .brief-description-series {
@@ -369,7 +369,7 @@ fieldset {
 	.other {
 		margin-bottom: 0px;
     	padding: 8px 30px;
-    	background: #FFDE00 url("images/111.png") no-repeat 324px 0px;
+    	background: #FFDE00 url("../images/111.png") no-repeat 324px 0px;
     	box-sizing: border-box;
     	clear: both;
     	font-size: 16px;
@@ -553,7 +553,7 @@ fieldset {
     			.img-link {
     				width: 15px;
     				height: 11px;
-    				background: url('images/mono_iconset.png') no-repeat 0px -236px;
+    				background: url('../images/mono_iconset.png') no-repeat 0px -236px;
     				display: inline-block;
     			}
     		}
@@ -582,7 +582,7 @@ fieldset {
     				content: '';
     				width: 15px;
     				height: 13px;
-    				background: url('images/sprite.png') no-repeat 0px -51px;
+    				background: url('../images/sprite.png') no-repeat 0px -51px;
     				display: inline-block;
     				position: relative;
     				top: 1px;
@@ -601,7 +601,7 @@ fieldset {
 
 .footer {
 	clear: both;
-    background: #FFDE00 url('images/footer.png') no-repeat;
+    background: #FFDE00 url('../images/footer.png') no-repeat;
     height: 113px;
     box-sizing: border-box;
 	padding: 20px 30px;
@@ -624,7 +624,7 @@ fieldset {
 		margin: 0px;
 	}
 	.wrapp-head	{
-		background: url('images/homer.png') no-repeat 424px 29px;
+		background: url('../images/homer.png') no-repeat 424px 29px;
 		.img-homer-head {
 			display: none;
 		}
@@ -670,7 +670,7 @@ fieldset {
 	.wrapp-other {
 		margin-right: 0px;
 		.other {
-		    background: #FFDE00 url("images/111.png") no-repeat 484px 0px;
+		    background: #FFDE00 url("../images/111.png") no-repeat 484px 0px;
 		}
 	}
 }
@@ -679,7 +679,7 @@ fieldset {
 	.wrapp-other {
 		margin-right: 0px;
 		.other {
-		    background: #FFDE00 url("images/111.png") no-repeat 414px 0px;
+		    background: #FFDE00 url("../images/111.png") no-repeat 414px 0px;
 		}
 	}
 }
@@ -693,26 +693,26 @@ fieldset {
 	.wrapp-other {
 		margin-right: 0px;
 		.other {
-		    background: #FFDE00 url("images/111.png") no-repeat 364px 0px;
+		    background: #FFDE00 url("../images/111.png") no-repeat 364px 0px;
 		}
 	}
 }
 
 @media screen and (max-width: 700px) {
 	.cap-section {
-		background: url("images/111.png") no-repeat -16px 0px,
-					url("images/news.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat -16px 0px,
+					url("../images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.img {
 		.cap-section;
-		background: url("images/111.png") no-repeat -16px 0px,
-					url("images/default.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat -16px 0px,
+					url("../images/default.png") no-repeat 9px 10px;
 		background-color: #FFDE00;
 	}
 	.wrapp-other {
 		.other {
-			background: #FFDE00 url("images/111.png") no-repeat 300px 0px;
+			background: #FFDE00 url("../images/111.png") no-repeat 300px 0px;
 		}
 	}
 }
@@ -727,19 +727,19 @@ fieldset {
 		margin-top: 15px;
 	}
 	.cap-section {
-		background: url("images/111.png") no-repeat 244px 0px,
-					url("images/news.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 244px 0px,
+					url("../images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.img {
 		.cap-section;
-		background: url("images/111.png") no-repeat 244px 0px,
-					url("images/default.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 244px 0px,
+					url("../images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.wrapp-other {
 		.other {
-			background: #FFDE00 url("images/111.png") no-repeat 244px 0px;
+			background: #FFDE00 url("../images/111.png") no-repeat 244px 0px;
 		}
 	}
 }
@@ -753,19 +753,19 @@ fieldset {
 		}
 	}
 	.cap-section {
-		background: url("images/111.png") no-repeat 175px 0px,
-					url("images/news.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 175px 0px,
+					url("../images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.img {
 		.cap-section;
-		background: url("images/111.png") no-repeat 174px 0px,
-					url("images/default.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 174px 0px,
+					url("../images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.wrapp-other {
 		.other {
-			background: #FFDE00 url("images/111.png") no-repeat 174px 0px;
+			background: #FFDE00 url("../images/111.png") no-repeat 174px 0px;
 		}
 	}
 }
@@ -818,19 +818,19 @@ fieldset {
 		left: -70px;
 	}
 	.cap-section {
-		background: url("images/111.png") no-repeat 75px 0px,
-					url("images/news.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 75px 0px,
+					url("../images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.img {
 		.cap-section;
-		background: url("images/111.png") no-repeat 75px 0px,
-					url("images/default.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 75px 0px,
+					url("../images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
 	}
 	.wrapp-other {
 		.other {
-			background: #FFDE00 url("images/111.png") no-repeat 75px 0px;
+			background: #FFDE00 url("../images/111.png") no-repeat 75px 0px;
 		}
 		.wrapp-box {
 			.picture {
@@ -868,38 +868,38 @@ fieldset {
 		left: -70px;
 	}
 	.cap-section {
-		background: url("images/111.png") no-repeat 35px 0px,
-					url("images/news.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 35px 0px,
+					url("../images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .img {
     	.cap-section;
-		background: url("images/111.png") no-repeat 35px 0px,
-					url("images/default.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 35px 0px,
+					url("../images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .wrapp-other {
 		.other {
-			background: #FFDE00 url("images/111.png") no-repeat 35px 0px;
+			background: #FFDE00 url("../images/111.png") no-repeat 35px 0px;
 		}
 	}
 }
 
 @media screen and (max-width: 360px) {
 	.cap-section {
-		background: url("images/111.png") no-repeat 25px 0px,
-					url("images/news.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 25px 0px,
+					url("../images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .img {
     	.cap-section;
-		background: url("images/111.png") no-repeat 25px 0px,
-					url("images/default.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat 25px 0px,
+					url("../images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .wrapp-other {
 		.other {
-			background: #FFDE00 url("/images/111.png") no-repeat 25px 0px;
+			background: #FFDE00 url("/../images/111.png") no-repeat 25px 0px;
 		}
 	}
 }
@@ -919,19 +919,19 @@ fieldset {
 		left: -86px;
 	}
 	.cap-section {
-		background: url("images/111.png") no-repeat -15px 0px,
-					url("images/news.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat -15px 0px,
+					url("../images/news.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .img {
     	.cap-section;
-		background: url("images/111.png") no-repeat -15px 0px,
-					url("images/default.png") no-repeat 9px 10px;
+		background: url("../images/111.png") no-repeat -15px 0px,
+					url("../images/default.png") no-repeat 9px 10px;
     	background-color: #FFDE00;
     }
     .wrapp-other {
 		.other {
-			background: #FFDE00 url("images/111.png") no-repeat -15px 0px;
+			background: #FFDE00 url("../images/111.png") no-repeat -15px 0px;
 		}
 	}
 }
