--- a/less/styles.less
+++ b/less/styles.less
@@ -115,7 +115,7 @@ fieldset {
     	margin: -65px 18px 0px 0px;
     	float: right;
 
-//  Оформление "RSS" и "B"
+//  Оформление "RSS" и "vk"
 
 		.fa {
 		    color: #ffffff;
